--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,77 @@
 body {
-  background-color: #889EAF; 
+  background-color: #889EAF;
   text-align: center;
+  font-size: 1.2rem;
 
-  font-family: "Francois One", sans-serif;
+  font-family: "Kanit", "Francois One", sans-serif;
 }
+
 h1 {
-  margin-top: 0px;
+  padding-top: 50px;
+  font-size: 4.5rem;
+  margin: 50px auto 0 auto;
   width: 10%;
-  margin:0 auto;
-  font-family: 'Secular One',serif;
-}
-hr {
-  border : 1px double dashed
+  font-family: 'Secular One', serif;
+  color: #0E5E6F;
 }
 
-.top-container{
+h2 {
+  font-size: 2.5rem;
+  color: #0E5E6F;
+  font-weight: normal;
+}
+
+hr {
+  border: 1px double dashed
+}
+
+
+.top-container {
   position: relative;
   padding-top: 30px;
 }
-.bottom-cloud{
+
+.bottom-cloud {
   position: absolute;
   left: 20%;
   bottom: 60%;
 }
-.upper-cloud{
+
+.upper-cloud {
   position: absolute;
   right: 150px;
   top: 50px;
 }
-.middle-container {
- image-resolution: 200px 200px;
+
+.hobbies-images1 {
+  width: 25%;
+  float: left;
+  padding-right: 30px;
 }
-.bottom-container {
-  
+
+.hobbies-images2 {
+  width: 25%;
+  float: right;
+  padding-left: 30px;
+}
+
+.skill-row {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+  line-height: 2;
+}
+
+.skill-row2 {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+  line-height: 2;
+  padding-top: 80px;
+}
+
+.middle-container {
+  image-resolution: 200px 200px;
+
+
 }
