--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 body {
-  background-color: #889EAF;
+  background-color: #F7F7F7;
   text-align: center;
   font-size: 1.2rem;
-
+  margin: 0px 0px 0px 0px;
   font-family: "Kanit", "Francois One", sans-serif;
+
 }
+
 
 h1 {
   padding-top: 50px;
@@ -12,32 +14,42 @@ h1 {
   margin: 50px auto 0 auto;
   width: 10%;
   font-family: 'Secular One', serif;
-  color: #0E5E6F;
+  color: #6D9886;
 }
 
 h2 {
   font-size: 2.5rem;
-  color: #0E5E6F;
+  color: #6D9886;
   font-weight: normal;
 }
 
+a {
+  margin: 10px 10px;
+}
+
 hr {
-  border: 1px double dashed
+  border: dotted #393E46 6px;
+  border-bottom: none;
+  width: 20%;
+  margin: auto;
 }
 
 
 .top-container {
   position: relative;
   padding-top: 30px;
+
 }
 
 .bottom-cloud {
   position: absolute;
   left: 20%;
   bottom: 60%;
+  width: 14%;
 }
 
 .upper-cloud {
+  width: 14%;
   position: absolute;
   right: 150px;
   top: 50px;
@@ -68,10 +80,63 @@ hr {
   text-align: left;
   line-height: 2;
   padding-top: 80px;
+
 }
 
 .middle-container {
   image-resolution: 200px 200px;
 
+}
 
+.contact-me {
+  background-color: #6D9886;
+  color: #F2E7D5;
+  padding-bottom: 50px;
+}
+
+.contact-me h2 {
+  color: #F2E7D5;
+}
+
+.bottom-container {
+  background-color: #393E46;
+  color: #F2E7D5;
+  padding: 10px 0 10px;
+}
+
+.btn {
+  background: #6D9886;
+  background-image: -webkit-linear-gradient(top, #6D9886, #6D9886);
+  background-image: -moz-linear-gradient(top, #6D9886, #6D9886);
+  background-image: -ms-linear-gradient(top, #6D9886, #6D9886);
+  background-image: -o-linear-gradient(top, #6D9886, #6D9886);
+  background-image: linear-gradient(to bottom, #6D9886, #6D9886);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: "Kanit", "Francois One", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #393E46 2px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #393E46, #393E46);
+  background-image: -moz-linear-gradient(top, #393E46, #393E46);
+  background-image: -ms-linear-gradient(top, #393E46, #393E46);
+  background-image: -o-linear-gradient(top, #393E46, #393E46);
+  background-image: linear-gradient(to bottom, #393E46, #393E46);
+  text-decoration: none;
+}
+
+.footer-link {
+  color: #F2E7D5;
+
+}
+
+.footer-link:hover {
+  color: #6D9886;
 }
